src/parser/snapshots/ling__parser__item__tests__eenum.snap
---
source: src/parser/item.rs
expression: "test_parse(\"enum Result[T, E] { Ok(T), Err(E), }\", |p| p.parse_module())"
---
(Module(
  items: [
    Enum(Enum(
      ident: Unresolved("Result"),
      ty_params: [
        Unresolved("T"),
        Unresolved("E"),
      ],
      variants: [
        EnumVariant(
          name: "Ok",
          kind: Tuple([
            Constructed(
              ident: Unresolved("T"),
              params: [],
            ),
          ]),
        ),
        EnumVariant(
          name: "Err",
          kind: Tuple([
            Constructed(
              ident: Unresolved("E"),
              params: [],
            ),
          ]),
        ),
      ],
    )),
  ],
), [], [])
