src/parser/snapshots/ling__parser__item__tests__field_assignment.snap
---
source: src/parser/item.rs
expression: "test_parse(\"my_struct.field = 12\", |p| p.parse_stmt())"
---
(Ok(Assignment(
  lhs: Field(
    expr: Var(Simple(Unresolved("my_struct"))),
    field: "field",
  ),
  rhs: Const(ConstIdx(0)),
)), "")
