src/parser/snapshots/ling__parser__item__tests__func_generic.snap
---
source: src/parser/item.rs
expression: "test_parse(\"foo[A, B]() {}\", |p| p.parse_func())"
---
(Ok(Func(
  ident: Unresolved("foo"),
  ty_params: [
    Unresolved("A"),
    Unresolved("B"),
  ],
  params: [],
  ret_ty: Tuple([]),
  body: Block(
    stmts: [],
    final_expr: Unit,
  ),
)), "", [])
