src/parser/snapshots/ling__parser__item__tests__func_with_args_and_trailing_comma.snap
---
source: src/parser/item.rs
expression: "test_parse(\"foo(a: uint, b: uint,) {}\", |p| p.parse_func())"
---
(Ok(Func(
  ident: Unresolved("foo"),
  ty_params: [],
  params: [
    (Unresolved("a"), Constructed(
      ident: Unresolved("uint"),
      params: [],
    )),
    (Unresolved("b"), Constructed(
      ident: Unresolved("uint"),
      params: [],
    )),
  ],
  ret_ty: Tuple([]),
  body: Block(
    stmts: [],
    final_expr: Unit,
  ),
)), "", [])
