src/parser/snapshots/ling__parser__item__tests__func_with_missing_rparen.snap
---
source: src/parser/item.rs
expression: "test_parse(\"foo(a: uint, {}\", |p| p.parse_func())"
---
(Err(Unexpected(
  expected: "an identifier",
  span: Span(
    start: 13,
    end: 15,
  ),
)), "error: mismatched Opening(Round)\n  ┌─ ::test_module:1:4\n  │\n1 │ foo(a: uint, {}\n  │    ^\n\n")
