src/parser/snapshots/ling__parser__item__tests__return_assignment.snap
---
source: src/parser/item.rs
expression: "test_parse(\"{ a = b }\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Assignment(
      lhs: Simple(Unresolved("a")),
      rhs: Var(Simple(Unresolved("b"))),
    ),
  ],
  final_expr: Dummy,
)), "error: invalid implicit return\n  ┌─ test_source:1:3\n  │\n1 │ { a = b }\n  │   ^^^^^\n\n")
